--- a/src/app/contacts/contacts-view/contacts-view.component.html
+++ b/src/app/contacts/contacts-view/contacts-view.component.html
@@ -26,8 +26,8 @@
         <div class="email" (click)="onSelect(contact)">
           {{contact.email}}
         </div>
-        <div class="list" (click)="onSelect(contact)">
-          {{contact.listName}}
+        <div class="group" (click)="onSelect(contact)">
+          {{contact.groupName}}
         </div>
         <div class="controls">
           <button mat-icon-button (click)="editContact(contact)">
