--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -5,7 +5,7 @@
         Contacts
       </a>
       <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla2="routerLinkActive" [active]="rla2.isActive">
-        Lists
+        Groups
       </a>
     </nav>
     <router-outlet></router-outlet>
