--- a/src/app/contacts/contacts-group/contacts-group-add/contacts-group-add.component.html
+++ b/src/app/contacts/contacts-group/contacts-group-add/contacts-group-add.component.html
@@ -1,18 +1,18 @@
-<div class="simple-form-aligner" *ngIf='isEditMode'>
+<div class="simple-form-aligner" >
   <mat-card class="simple-form-card">
-    <mat-card-title>Edit list </mat-card-title>
+    <mat-card-title>Create group </mat-card-title>
     <mat-card-content>
       <form [formGroup]="form" (ngSubmit)="submit(form.value)">
         <div class="form-group">
           <mat-form-field class="simple-form-field-50">
-            <input matInput placeholder="List name" name="listName" formControlName="listName">
+            <input matInput placeholder="Group name" name="groupName" formControlName="groupName">
           </mat-form-field>
           <br>
           <br>
           <div style="text-align: center">
             <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
-              value="submit" (click)="updateList(form.value)">
-              Update
+              value="submit" (click)="addGroup(form.value)">
+              Create
             </button>
             <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
               [diameter]=22>
