--- a/src/app/contacts/contacts-group/contacts-group-details/contacts-group-details.component.html
+++ b/src/app/contacts/contacts-group/contacts-group-details/contacts-group-details.component.html
@@ -1,12 +1,12 @@
-<div class="container" *ngIf='listContact.length === 0'>
+<div class="container" *ngIf='groupContact.length === 0'>
   <mat-card>
     <div class="col-md-8 offset-md-2">
-      <p> You dont have contacts into this list </p>
+      <p> You dont have contacts into this Group </p>
     </div>
   </mat-card>
 </div>
 
-<mat-card style="margin: 2px;" *ngFor="let contact of listContact">
+<mat-card style="margin: 2px;" *ngFor="let contact of groupContact">
   <mat-card-header>
     <img mat-card-avatar src="/assets/img/profile-demo.jpg">
     <div class="contactStyle">
@@ -18,8 +18,8 @@
       <div class="email" (click)="onSelect(contact)">
         {{contact.email}}
       </div>
-      <div class="list" >
-        {{contact.listName}}
+      <div class="Group" >
+        {{contact.GroupName}}
       </div>
       <div class="controls">
         <button mat-icon-button (click)="openRemoveContact(contact, modal)">
@@ -35,7 +35,7 @@
 <ng-template #modal>
   <mat-dialog-content>
     <div>
-      Are you sure you want to remove the contact "{{removeContactName}}" from this list?
+      Are you sure you want to remove the contact "{{removeContactName}}" from this Group?
     </div>
   </mat-dialog-content>
   <mat-dialog-actions align='center'>
