--- a/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/src/app/contacts/contacts-add/contacts-add.component.html
@@ -19,12 +19,21 @@
           </mat-form-field>
           <br>
           <mat-form-field>
-            <mat-select placeholder="Choose a group" name="contactGroup" formControlName="contactGroup">
-              <mat-option *ngFor="let lst of groups" [value]="lst">
-                {{lst.groupName}}
-              </mat-option>
+            <mat-select placeholder="Toppings" [formControl]="toppings" multiple (ngModelChange)="onSelection($event)">
+              <mat-select-trigger>
+                {{toppings.value ? toppings.value[0] : ''}}
+                <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
+                  (+{{toppings.value.length - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
+                </span>
+              </mat-select-trigger>
+              <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
             </mat-select>
           </mat-form-field>
+          <div *ngFor="let options of toppingSelection">
+          <mat-card >
+            {{options}}
+          </mat-card>
+        </div>
           <br>
           <br>
           <div style="text-align: center">
