Contacts, adding multi groups

--- a/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/src/app/contacts/contacts-add/contacts-add.component.html
@@ -29,7 +29,7 @@
           <mat-card >
             {{group}}
             <button mat-icon-button (click)="unselectGroup(group)">
-              <mat-icon >delete</mat-icon>
+              <mat-icon class="group-remove-icon" aria-hidden="false">remove_circle</mat-icon>
             </button>
           </mat-card>
           <br>
