--- a/src/app/contacts/contacts-add/contacts-add.component.scss
+++ b/src/app/contacts/contacts-add/contacts-add.component.scss
@@ -7,3 +7,20 @@
   padding: 0 90%;
 }
 
+
+
+
+.cardList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+/* Column Gap */
+.cardList > * {
+  box-sizing: border-box;
+}
+.cardList > * {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
