--- a/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/src/app/contacts/contacts-add/contacts-add.component.html
@@ -18,30 +18,32 @@
             </mat-error>
           </mat-form-field>
           <br>
-          <mat-form-field>
-            <mat-select placeholder="Choose a group" name="contactGroup" formControlName="contactGroup"
-              (ngModelChange)="onSelection($event)">
-              <mat-option *ngFor="let lst of allGroups" [value]="lst">
-                {{lst.groupName}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <div *ngIf='groupsSelection.length > 0'>
-            <div class="simple-form-aligner">
-              <mat-card class="simple-form-card">
-                <div class="cardList">
-                  <div *ngFor="let group of groupsSelection">
-                    <mat-card class="cardList">
-                      {{group.groupName}}
-                      <button mat-icon-button (click)="unselectGroup(group)">
-                        <mat-icon class="cardList">remove_circle</mat-icon>
-                      </button>
-                    </mat-card>
-                  </div>
-                </div>
-              </mat-card>
-            </div>
-          </div>
+          <mat-form-field class="example-chip-list">
+              <mat-chip-list #chipList>
+                <mat-chip
+                  *ngFor="let group of selectedGroups"
+                  [selectable]="selectable"
+                  [removable]="removable"
+                  (removed)="remove(group)">
+                  {{group}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input
+                  placeholder="Choose a group..."
+                  #groupInput
+                  [formControl]="groupCtrl"
+                  [matAutocomplete]="auto"
+                  [matChipInputFor]="chipList"
+                  [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                  [matChipInputAddOnBlur]="addOnBlur"
+                  (matChipInputTokenEnd)="add($event)">
+              </mat-chip-list>
+              <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                <mat-option *ngFor="let group of filteredGroups | async" [value]="group">
+                  {{group}}
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
           <br>
           <div style="text-align: center">
             <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
@@ -65,29 +67,3 @@
 <br>
 <br>
 
-<mat-form-field class="example-chip-list">
-    <mat-chip-list #chipList>
-      <mat-chip
-        *ngFor="let fruit of fruits"
-        [selectable]="selectable"
-        [removable]="removable"
-        (removed)="remove(fruit)">
-        {{fruit}}
-        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-      </mat-chip>
-      <input
-        placeholder="New fruit..."
-        #fruitInput
-        [formControl]="fruitCtrl"
-        [matAutocomplete]="auto"
-        [matChipInputFor]="chipList"
-        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-        [matChipInputAddOnBlur]="addOnBlur"
-        (matChipInputTokenEnd)="add($event)">
-    </mat-chip-list>
-    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-      <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
-        {{fruit}}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
