--- a/src/app/contacts/contacts-add/contacts-add.component.html
+++ b/src/app/contacts/contacts-add/contacts-add.component.html
@@ -19,31 +19,22 @@
           </mat-form-field>
           <br>
           <mat-form-field class="example-chip-list">
-              <mat-chip-list #chipList>
-                <mat-chip
-                  *ngFor="let group of selectedGroups"
-                  [selectable]="selectable"
-                  [removable]="removable"
-                  (removed)="remove(group)">
-                  {{group}}
-                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input
-                  placeholder="Choose a group..."
-                  #groupInput
-                  [formControl]="groupCtrl"
-                  [matAutocomplete]="auto"
-                  [matChipInputFor]="chipList"
-                  [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                  [matChipInputAddOnBlur]="addOnBlur"
-                  (matChipInputTokenEnd)="add($event)">
-              </mat-chip-list>
-              <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-                <mat-option *ngFor="let group of filteredGroups | async" [value]="group">
-                  {{group}}
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
+            <mat-chip-list #chipList>
+              <mat-chip *ngFor="let group of selectedGroups" [selectable]="selectable" [removable]="removable"
+                (removed)="remove(group)">
+                {{group}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+              <input placeholder="Choose a group..." #groupInput [formControl]="groupCtrl" [matAutocomplete]="auto"
+                [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+            </mat-chip-list>
+            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+              <mat-option *ngFor="let group of filteredGroups | async" [value]="group">
+                {{group}}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
           <br>
           <div style="text-align: center">
             <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
@@ -66,4 +57,3 @@
 <br>
 <br>
 <br>
-
