--- a/src/app/contacts/contacts-edit/contacts-edit.component.html
+++ b/src/app/contacts/contacts-edit/contacts-edit.component.html
@@ -18,15 +18,23 @@
             </mat-error>
           </mat-form-field>
           <br>
-          <mat-form-field>
-            <mat-select placeholder="Choose a group" name="contactGroup" formControlName="contactGroup">
-              <mat-option *ngFor="let lst of groups" [value]="lst">
-                {{lst.groupName}}
+          <mat-form-field class="example-chip-list">
+            <mat-chip-list #chipList>
+              <mat-chip *ngFor="let group of selectedGroups" [selectable]="selectable" [removable]="removable"
+                (removed)="remove(group)">
+                {{group}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+              <input placeholder="Choose a group..." #groupInput [formControl]="groupCtrl" [matAutocomplete]="auto"
+                [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+            </mat-chip-list>
+            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+              <mat-option *ngFor="let group of filteredGroups | async" [value]="group">
+                {{group}}
               </mat-option>
-            </mat-select>
+            </mat-autocomplete>
           </mat-form-field>
-          <br>
-          {{ContactGroupsArr}}
           <br>
           <div style="text-align: center">
             <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
