--- a/src/app/contacts/contacts-group/contacts-group-details/contacts-group-details.component.html
+++ b/src/app/contacts/contacts-group/contacts-group-details/contacts-group-details.component.html
@@ -39,7 +39,7 @@
     </div>
   </mat-dialog-content>
   <mat-dialog-actions align='center'>
-    <button (click)="resetForm()" mat-raised-button color='warn'>Cancel
+    <button (click)="cancelDelete()" mat-raised-button color='warn'>Cancel
     </button>
     <button (click)="removeContact()" mat-raised-button cdkFocusInitial color='primary'>Yes
     </button>
