--- a/src/app/connections/connections-sent/connections-sent.component.html
+++ b/src/app/connections/connections-sent/connections-sent.component.html
@@ -10,10 +10,10 @@
   <mat-card-header>
     <img mat-card-avatar src="/assets/img/profile-demo.jpg">
     <div class="contactStyle">
-      <div class="givenName" (click)="onSelect(contact)">
+      <div class="givenName" >
         {{contact.givenName}}
       </div>
-      <div class="familyName" (click)="onSelect(contact)">
+      <div class="familyName" >
         {{contact.familyName}}
       </div>
       <div class="controls">
