--- a/src/app/connections/connections-request/connections-request.component.html
+++ b/src/app/connections/connections-request/connections-request.component.html
@@ -6,48 +6,41 @@
     </mat-card>
 </div>
 
-<div *ngIf='pendingConnections.length > 0'>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- givenName Column -->
-        <ng-container matColumnDef="Given Name">
-            <th mat-header-cell *matHeaderCellDef>
-                Given name
-            </th>
-            <td mat-cell *matCellDef="let element">
-                {{element.givenName}}
-            </td>
-        </ng-container>
-        <!-- familyName Column -->
-        <ng-container matColumnDef="Family Name">
-            <th mat-header-cell *matHeaderCellDef>
-                Family name
-            </th>
-            <td mat-cell *matCellDef="let element">
-                {{element.familyName}}
-            </td>
-        </ng-container>
-        <!-- familyName Column -->
-        <ng-container matColumnDef="Action">
-            <th mat-header-cell *matHeaderCellDef>
-                Take action
-            </th>
-            <td mat-cell *matCellDef="let element">
+<mat-card style="margin: 2px;" *ngFor="let contact of pendingConnections">
+    <mat-card-header>
+        <img mat-card-avatar src="/assets/img/profile-demo.jpg">
+        <div class="contactStyle">
+            <div class="givenName">
+                {{contact.givenName}}
+            </div>
+            <div class="familyName">
+                {{contact.familyName}}
+            </div>
+            <div class="controls" >
                 <button class="simple-form-button" color="primary" mat-raised-button
-                    (click)="approveUserConnection(element)">
+                    (click)="approveUserConnection(contact)">
                     Confirm
                 </button>
                 &nbsp;
-                <button class="simple-form-button" mat-raised-button (click)="ignoreUserConnection(element)">
+                <button class="simple-form-button" mat-raised-button (click)="ignoreSentConfirmation(contact,modal)">
                     Ignore
                 </button>
-                <span *ngIf='userErrorId == element.userId'>
-                    <span *ngIf='formErrorMessage' class="text-error-color">
-                        {{formErrorMessage}}
-                    </span>
-                </span>
-            </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-</div>
+            </div>
+        </div>
+    </mat-card-header>
+</mat-card>
+
+
+<ng-template #modal>
+    <mat-dialog-content>
+      <div>
+        Are you sure you want to ignore this request?
+      </div>
+    </mat-dialog-content>
+    <mat-dialog-actions align='center'>
+      <button (click)="resetForm()" mat-raised-button color='warn'>Cancel
+      </button>
+      <button (click)="ignoreConnection()" mat-raised-button cdkFocusInitial color='primary'>Yes
+      </button>
+    </mat-dialog-actions>
+  </ng-template>
