contactImage for connection and contact
- Added contact image instead of static one.

--- a/src/app/connections/connections-request-details/connections-request-details.component.html
+++ b/src/app/connections/connections-request-details/connections-request-details.component.html
@@ -5,7 +5,7 @@
   <mat-card-content>
     <div class="profile-image">
       <img mat-card-lg-image class="img-class" width="300" height="300"
-        src='https://pbs.twimg.com/profile_images/984062643798343680/MDBh6zaW_400x400.jpg'>
+      [src]="user.profileImage">
     </div>
   </mat-card-content>
   <mat-card>Name:  {{requestConnection.givenName}} {{requestConnection.familyName}}</mat-card>
