--- a/src/app/connections/connections-request/connections-request.component.html
+++ b/src/app/connections/connections-request/connections-request.component.html
@@ -8,7 +8,7 @@
  
 <mat-card style="margin: 2px;" *ngFor="let connection of pendingConnections">
     <mat-card-header>
-        <img mat-card-avatar src="/assets/img/profile-demo.jpg">
+        <img mat-card-avatar [src]="user.profileImage">
         <div class="contactStyle">
             <div class="givenName" (click)="onSelect(connection)">
                 {{connection.givenName}}
