--- a/src/app/connections/connections-sent/connections-sent.component.html
+++ b/src/app/connections/connections-sent/connections-sent.component.html
@@ -8,7 +8,7 @@
 
 <mat-card style="margin: 2px;" *ngFor="let contact of connectionSent">
   <mat-card-header>
-    <img mat-card-avatar src="/assets/img/profile-demo.jpg">
+    <img mat-card-avatar [src]="user.profileImage">
     <div class="contactStyle">
       <div class="givenName" >
         {{contact.givenName}}
