--- a/src/app/connections/connections-view/connections-view.component.html
+++ b/src/app/connections/connections-view/connections-view.component.html
@@ -10,7 +10,7 @@
 
 <mat-card style="margin: 2px;" *ngFor="let contact of confirmedConnections">
   <mat-card-header>
-    <img mat-card-avatar src="/assets/img/profile-demo.jpg">
+    <img mat-card-avatar [src]="user.profileImage">
     <div class="contactStyle">
       <div class="givenName" >
         {{contact.givenName}}
